--- a/public/stylesheets/home.less
+++ b/public/stylesheets/home.less
@@ -7,6 +7,8 @@
 	width: 100vw;
 	height: 100vh;
 
+	opacity: 1;
+
 	video 
 	{
 		position: relative;
@@ -15,4 +17,13 @@
 		width: 100vw;
 		height: 80vh;
 	}
+
+
+	&.ct-white-out
+	{
+		opacity: 0;
+	}
+
+	.transition(opacity 1s linear);
 }
+
