--- a/views/base.html
+++ b/views/base.html
@@ -25,7 +25,7 @@
             <script src="js/jquery.min.js"></script>
 
             {# FONT AWESOME #}
-            <link href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet">
+            {#<link href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet">#}
 
             {# PROJECT CSS #}
             <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
