lo res video default, added route for hi and lo

--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -4,7 +4,13 @@ body
 {
 	margin: 0;
 
-	background-color: #ef5886;
+	// background-color: #ef5886;
+	background-color: #df4582;
+
+	&.hi-res
+	{
+		background-color: #ef5886;	
+	}
 }
 
 .block
