--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,6 @@
 
 {% block main %}
 <div class="ct-video ct-white-out">
-	<video id="fish" autoplay src="videos/fish_hula.mov"></video>
+	<video id="fish" autoplay src="videos/hula_fish_lo.mov"></video>
 </div>
 {% endblock %}
