--- a/public/stylesheets/mixins.less
+++ b/public/stylesheets/mixins.less
@@ -14,3 +14,22 @@
 	-ms-transform: 		   ~'@{string}';
 	-o-transform: 		   ~'@{string}';
 }
+
+.placeholder-text(@color)
+{
+  &::-webkit-input-placeholder {
+    color: @color;
+  }
+
+  &:-moz-placeholder { /* Firefox 18- */
+     color: @color;  
+  }
+
+  &::-moz-placeholder {  /* Firefox 19+ */
+     color: @color;  
+  }
+
+  &:-ms-input-placeholder {  
+     color: @color;  
+  }
+}
