--- a/views/hiRes.html
+++ b/views/hiRes.html
@@ -9,6 +9,6 @@
 
 {% block main %}
 <div class="ct-video ct-white-out">
-	<video id="fish" autoplay src="videos/fish_hula.mov"></video>
+	<video id="fish" autoplay src="videos/fish_hula.mov" type="video/quicktime"></video>
 </div>
 {% endblock %}
