--- a/views/loRes.html
+++ b/views/loRes.html
@@ -4,12 +4,12 @@
     <script src="js/home.js"></script>
 {% endblock %}
 
-{% block bodyClass %}ct-landing{% endblock %}
+{% block bodyClass %}ct-landing lo-res{% endblock %}
 
 
 {% block main %}
 <div class="ct-video ct-white-out">
-	<video id="fish" width="100vw" height="100vh" autoplay loop src="videos/fish_hula.mov" type="video/quicktime"></video>
+	<video id="fish" width="100vw" height="100vh" autoplay loop src="videos/hula_fish_lo.mov" type="video/quicktime"></video>
 </div>
 <div class="ct-signup">
 {#	#}<div class="ct-signup-button"><div class="ct-signup-peace"></div></div>{#
