--- a/views/base.html
+++ b/views/base.html
@@ -2,17 +2,17 @@
 <html lang="en-US">
     <head>      
         {% block head %}
-            <title>Cartuna PT</title>
+            <title>Cartuna</title>
             <link rel="icon" href="favicon.ico?v=2">
             
             {# OG TAGS #}
-            <meta property="og:title" content=""/>
-            <meta property="og:site_name" content=""/>
-            <meta property="og:url" content=""/>
-            <meta property="og:image" content=""/>
+            <meta property="og:title" content="Cartuna"/>
+            <meta property="og:site_name" content="Cartuna"/>
+            <meta property="og:url" content="cartuna.com"/>
+            <meta property="og:image" content="img/Hula-Fish.gif"/>
 
             {# SEO #}
-            <meta name="description" content=""/>
+            <meta name="description" content="Cartuna is a brand new Bushwick, Brooklyn-based animation company launching an online and mobile channel of original adult cartoons in 2016."/>
 
             {# MOBILE #}
             <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -20,7 +20,7 @@
             {# TYPEKIT ##}
             {#<script src="//use.typekit.net/XXXX.js"></script>#}
             {#<script>try{Typekit.load();}catch(e){}</script>#}
-
+  
             {# JQUERY #}
             <script src="js/jquery.min.js"></script>
 
