--- a/views/index.html
+++ b/views/index.html
@@ -9,8 +9,11 @@
 
 {% block main %}
 <div class="ct-video ct-white-out">
-	<video id="fish" width="100vw" height="100vh" autoplay loop src="videos/fish_hula.mov" type="video/quicktime"></video>
+	<video id="fish" width="100vw" height="100vh" autoplay loop src="videos/Hula Fish.mov" type="video/quicktime"></video>
 </div>
+<div class="ct-gif-container">
+	<div class="ct-gif"></div>
+</div>	
 <div class="ct-signup">
 {#	#}<div class="ct-signup-button"><div class="ct-signup-peace"></div></div>{#
 	#}<div class="ct-signup-tab">
