--- a/views/base.html
+++ b/views/base.html
@@ -3,7 +3,8 @@
     <head>      
         {% block head %}
             <title>Cartuna</title>
-            <link rel="icon" href="favicon.ico?v=2">
+            <!-- <link rel="icon" href="favicon.ico?v=3"> -->
+            <link rel="icon" href="favicon.jpg?v=3">
             
             {# OG TAGS #}
             <meta property="og:title" content="Cartuna"/>
