updated gif to smaller version

--- a/public/stylesheets/home.less
+++ b/public/stylesheets/home.less
@@ -78,7 +78,7 @@ body.ct-landing
 
 	.transform(translate3d(-50% ,0% ,0));
 
-	background-image: url('../img/Hula-Fish.gif');
+	background-image: url('../img/Hula-Fish-stay-tooned.gif');
 	background-size: cover;
 	background-position: center center;
 	background-repeat: no-repeat;
