--- a/views/base.html
+++ b/views/base.html
@@ -10,7 +10,7 @@
             <meta property="og:title" content="Cartuna"/>
             <meta property="og:site_name" content="Cartuna"/>
             <meta property="og:url" content="cartuna.com"/>
-            <meta property="og:image" content="img/Hula-Fish.gif"/>
+            <meta property="og:image" content="img/Hula-Fish-stay-tooned.gif"/>
 
             {# SEO #}
             <meta name="description" content="Cartuna is a brand new Bushwick, Brooklyn-based animation company launching an online and mobile channel of original adult cartoons in 2016."/>
