added display:none to foo image in head

--- a/views/base.html
+++ b/views/base.html
@@ -43,7 +43,7 @@
             </script>
             
             {# INSIGHT #}
-            <img height="1" width="1" style="border-style:none;" alt="" src="//insight.adsrvr.org/track/conv/?adv=5mfieb7&ct=0:jiztblw&fmt=3"/>
+            <img height="1" width="1" style="border-style:none; display:none;" alt="" src="//insight.adsrvr.org/track/conv/?adv=5mfieb7&ct=0:jiztblw&fmt=3"/>
             
             {# FB PIXIL CODE #}
             <script>
