--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,7 @@
 {% block main %}
 <div class="ct-gif-container">
 	<div class="ct-gif"></div>
+  <video src="videos/landing.mp4" width="100%" height="100%" autoplay loop></video>
 </div>
 <div class="ct-signup">
 {#	#}<div class="ct-signup-button"><div class="ct-signup-peace"></div></div>{#
